crates/graphql-orm/tests/ui/composite_mutation_generated_key.stderr
error: repository mutation composite keys cannot contain an auto-generated primary field; set auto_generated = false
  --> tests/ui/composite_mutation_generated_key.rs:14:5
   |
14 |     id: String,
   |     ^^
